# ai-ocr

./: app.py  pyproject.toml
